testproj/src/objects/AP_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the value of the 1st approver for standard approval process</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AP_Trackers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_History__c</fullName>
        <label>Comment History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Email_Id__c</fullName>
        <label>Completion Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <label>Current State</label>
        <picklist>
            <picklistValues>
                <fullName>Ready For Indexing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Supervisory Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisory Resolution Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Reject Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework QC Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework Incorrect Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending For Archival</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Response Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Post Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Email Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold Records</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <controllingField>Worktype__c</controllingField>
            <picklistValues>
                <fullName>Bank Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netting/Clearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset/Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Cash entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allow Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMC credit Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Deductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Deductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaccine Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excise Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misshipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Discrepancies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortage Discrepancies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ERP_System_Code__c</fullName>
        <label>ERP System</label>
        <picklist>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS900</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailHistoryDetail__c</fullName>
        <label>EmailHistoryDetail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Attachment_ID__c</fullName>
        <label>Email Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outbound_Attachment_Ids__c</fullName>
        <label>Outbound Attachment Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerType__c</fullName>
        <label>OwnerType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Reason__c</fullName>
        <label>Pending Reason</label>
        <picklist>
            <controllingField>Worktype__c</controllingField>
            <picklistValues>
                <fullName>Additional Information Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callback from Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copy Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDP Holdback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Chargeback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <picklist>
            <controllingField>Worktype__c</controllingField>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impasse Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied/ Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescan Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rejection_Email_Id__c</fullName>
        <label>Rejection Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisory_Comments__c</fullName>
        <label>Supervisory Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_Comment__c</fullName>
        <label>Template Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tracker_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Id</label>
        <referenceTo>Tracker__c</referenceTo>
        <relationshipLabel>AP Trackers</relationshipLabel>
        <relationshipName>AP_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Action_Selected__c</fullName>
        <label>User Action Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Actions__c</fullName>
        <label>User Action</label>
        <picklist>
            <controllingField>Current_State__c</controllingField>
            <picklistValues>
                <fullName>Approval Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archival Modification Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Resolution Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send For Email Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send For Supervisory Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisory Resolution Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Case_Id__c</fullName>
        <label>Web Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worktype__c</fullName>
        <description>Listing of all Work Types</description>
        <label>Work Type</label>
        <picklist>
            <controllingField>Process__c</controllingField>
            <picklistValues>
                <fullName>Cash Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deductions &amp; Disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting/Controls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AP Tracker</label>
    <nameField>
        <displayFormat>Case-{000000000}</displayFormat>
        <label>Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>